Fix mobile to not have any weird overflow-y jiggle.

--- a/patterns/lfa-patterns/layout/content.styl
+++ b/patterns/lfa-patterns/layout/content.styl
@@ -45,3 +45,13 @@ body
   position: fixed
   width: 100%
   height: 100%
+
+  // Fix mobile to not have any weird overflow-y jiggle.
+  @media (max-width: 767px)
+    #content.row
+      margin-left: 0
+      margin-right: 0
+      overflow-x: hidden
+      #textbook
+        padding-left: 0
+        padding-right: 0
